--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,9 +3,10 @@ black==22.3.0
 pytest==7.4.0
 pytest-cov==4.0.0
 pylint==2.15.3
+nbval==0.11.0
 
 ## Misc. Packages
-pandas==1.5.3
-numpy==1.24.2
-matplotlib==3.7.1
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.9.2
 fpdf==1.7.2
